src/test/ui/const-generics/defaults/mismatched_ty_const_in_trait_impl.stderr
error[E0053]: method `foo` has an incompatible generic parameter for trait
  --> $DIR/mismatched_ty_const_in_trait_impl.rs:5:12
   |
LL |     fn foo<const M: u64>() {}
   |            ^^^^^^^^^^^^
   |
note: the trait impl specifies `M` is a const parameter of type `u64`, but the declaration in trait `Trait::foo` requires it is a type parameter
  --> $DIR/mismatched_ty_const_in_trait_impl.rs:2:12
   |
LL |     fn foo<U>() {}
   |            ^

error[E0053]: method `bar` has an incompatible generic parameter for trait
  --> $DIR/mismatched_ty_const_in_trait_impl.rs:13:12
   |
LL |     fn bar<T>() {}
   |            ^
   |
note: the trait impl specifies `T` is a type parameter, but the declaration in trait `Other::bar` requires it is a const parameter of type `u8`
  --> $DIR/mismatched_ty_const_in_trait_impl.rs:10:12
   |
LL |     fn bar<const M: u8>() {}
   |            ^^^^^^^^^^^

error[E0053]: method `baz` has an incompatible const parameter type for trait
  --> $DIR/mismatched_ty_const_in_trait_impl.rs:21:12
   |
LL |     fn baz<const N: i32>() {}
   |            ^^^^^^^^^^^^
   |
note: the const parameter `N` has type `i32`, but the declaration in trait `Uwu::baz` has type `u32`
  --> $DIR/mismatched_ty_const_in_trait_impl.rs:18:12
   |
LL |     fn baz<const N: u32>() {}
   |            ^^^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0053`.
